force-app/main/default/objects/Country_Product_Economy__c/Country_Product_Economy__c.object-meta.xml
<CustomObject>
    <label>Country Product Economy</label>
    <pluralLabel>Country Product Economies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Country Product Key</label>
        <type>Text</type>
    </nameField>
</CustomObject>