force-app/main/default/objects/Country_Product_Economy__c/fields/Actual_Sold_World__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sold_World__c</fullName>
    <label>Actual Sold World</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>