force-app/main/default/objects/Country_Product_Economy__c/fields/Actual_Supply_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Actual_Supply_Pounds__c</fullName>
    <label>Actual Supply (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>