force-app/main/default/objects/Country_Product_Economy__c/fields/Bought_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Bought_Quantity__c</fullName>
    <label>Bought Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>