force-app/main/default/objects/Country_Product_Economy__c/fields/Export_Value__c.field-meta.xml
<CustomField>
    <fullName>Export_Value__c</fullName>
    <label>Export Value (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>