force-app/main/default/objects/Country_Product_Economy__c/fields/GDP_Contribution__c.field-meta.xml
<CustomField>
    <fullName>GDP_Contribution__c</fullName>
    <label>GDP Contribution (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>