force-app/main/default/objects/Country_Product_Economy__c/fields/Intermediate_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Consumption__c</fullName>
    <label>Intermediate Consumption</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>