force-app/main/default/objects/Country_Product_Economy__c/fields/Product_Economy__c.field-meta.xml
<CustomField>
    <fullName>Product_Economy__c</fullName>
    <label>Product Economy</label>
    <type>Lookup</type>
    <referenceTo>Product_Economy__c</referenceTo>
    <relationshipName>Country_Product_Economies</relationshipName>
    <required>true</required>
</CustomField>