force-app/main/default/objects/Country_Product_Economy__c/fields/Sold_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Sold_Quantity__c</fullName>
    <label>Sold Quantity</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>