force-app/main/default/objects/Country_Product_Economy__c/fields/Thrown_To_Market__c.field-meta.xml
<CustomField>
    <fullName>Thrown_To_Market__c</fullName>
    <label>Thrown To Market</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>