force-app/main/default/objects/Country_Product_Economy__c/fields/Total_Supply_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Total_Supply_Pounds__c</fullName>
    <label>Total Supply (£)</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>