force-app/main/default/objects/Country_Product_Economy__c/fields/Unique_Snapshot_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Snapshot_Key__c</fullName>
    <label>Unique Snapshot Key</label>
    <type>Text</type>
    <length>150</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <required>true</required>
</CustomField>