force-app/main/default/objects/Country_Product_Economy__c/fields/Worldmarket_Pool__c.field-meta.xml
<CustomField>
    <fullName>Worldmarket_Pool__c</fullName>
    <label>Worldmarket Pool</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>